# algorithm

./: .gitignore  CMakeLists.txt
copy/aes/aes_base/: aes.h  aes_core.cpp  main_test.cpp
copy/aes/aes_base_iv/: aes.h  aes_cbc.cpp  aes_core.cpp  cbc128.cpp  modes.h  test.cpp
copy/aes/aes_tiny/: aes.cpp  test.cpp
copy/hash/MurmurHash/: MurmurHash2.cpp  MurmurHash2.h  main.cpp
copy/hash/md5/: md5.cpp  test.cpp
copy/hash/md5_hmac/: md5.cpp  md5.h  test.cpp
magic/aes/aes_xhs_6611/: aes_cbc.cpp  aes_core.cpp  aes_locl.h  cbc128.cpp  modes.h  test.cpp  xhs.cpp  xhs.h
magic/hmac/xhs_6611/: md5_transform.cpp
openssl/hmac/: test.cpp
openssl/md5/: test_md5.cpp
